Fix wrapping code block.

--- a/css/screen.css
+++ b/css/screen.css
@@ -74,7 +74,7 @@ h1 a:hover {
 }
 
 #wrap {
-  width: 52em;
+  width: 57em;
   /*width: 760px;*/
   max-width: 100%;
   margin: 0 auto;
@@ -123,7 +123,7 @@ pre code {
   border-top: 1px solid rgba(255,255,255,0.08);
   padding: 2em 20px 0;
 }
- 
+
 #informations .row .col-1 {
   width: 49%;
   float: left;
